# snark-bench

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
benches/: field_ops.rs  hashing.rs
examples/: binius_sumcheck.rs  bn254_fr_sumcheck.rs  fri_binius_pcs.rs  goldilocks_fri_pcs.rs  jolt_hyrax_pcs.rs  plonky3_fri_pcs.rs  stwo_pcs.rs
